--- a/package.json
+++ b/package.json
@@ -4,12 +4,27 @@
   "description": "Product Requirement Prompt Framework for AI Assisted Coding",
   "main": "index.js",
   "scripts": {
-    "test": "vitest run"
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:compile": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vitest": "^1.0.0"
+    "@mermaid-js/mermaid-cli": "^11.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "typescript-eslint": "^8.37.0",
+    "vitest": "^1.6.1"
+  },
+  "dependencies": {
+    "@types/node": "^24.1.0",
+    "dotenv": "^17.2.1",
+    "typescript": "^5.8.3"
   }
 }
